test: test new nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -8,7 +8,7 @@ resolver 127.0.0.11 valid=10s;
 
 
 server {
-    server_name api.moneyswap.online;
+    # server_name api.moneyswap.online;
 
     listen 80;
     listen [::]:80;
@@ -158,7 +158,9 @@ server {
     location / {
         # set $backend_service django_fastapi;
         proxy_pass http://django_fastapi:8000;
-        proxy_set_header Host $http_host;
+        # proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -171,76 +173,76 @@ server {
 }
 
 
-server {
-    server_name app.moneyswap.online;
+# server {
+#     server_name app.moneyswap.online;
     
-    listen 80;
-    listen [::]:80;
-    listen 443 ssl;
-    # listen [::]:443;
+#     listen 80;
+#     listen [::]:80;
+#     listen 443 ssl;
+#     # listen [::]:443;
 
-    ssl_certificate     /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
+#     ssl_certificate     /etc/nginx/certs/cert.pem;
+#     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    client_max_body_size 200M;
+#     client_max_body_size 200M;
 
-    location / {
-        proxy_pass https://moneyswap-webapp.vercel.app;
-        proxy_set_header Host moneyswap-webapp.vercel.app;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     location / {
+#         proxy_pass https://moneyswap-webapp.vercel.app;
+#         proxy_set_header Host moneyswap-webapp.vercel.app;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        add_header X-Served-By "nginx-moneyswap" always;
-    }
-}
+#         add_header X-Served-By "nginx-moneyswap" always;
+#     }
+# }
 
-server {
-    server_name www.moneyswap.online;
+# server {
+#     server_name www.moneyswap.online;
     
-    listen 80;
-    listen [::]:80;
-    listen 443 ssl;
-    # listen [::]:443;
+#     listen 80;
+#     listen [::]:80;
+#     listen 443 ssl;
+#     # listen [::]:443;
 
-    ssl_certificate     /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
+#     ssl_certificate     /etc/nginx/certs/cert.pem;
+#     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    client_max_body_size 200M;
+#     client_max_body_size 200M;
 
-    location / {
-        proxy_pass https://moneyswap-nextjs.vercel.app;
-        proxy_set_header Host moneyswap-nextjs.vercel.app;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     location / {
+#         proxy_pass https://moneyswap-nextjs.vercel.app;
+#         proxy_set_header Host moneyswap-nextjs.vercel.app;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        add_header X-Served-By "nginx-moneyswap" always;
-    }
-}
+#         add_header X-Served-By "nginx-moneyswap" always;
+#     }
+# }
 
-server {
-    server_name test.moneyswap.online;
+# server {
+#     server_name test.moneyswap.online;
     
-    listen 80;
-    listen [::]:80;
-    listen 443 ssl;
-    # listen [::]:443;
+#     listen 80;
+#     listen [::]:80;
+#     listen 443 ssl;
+#     # listen [::]:443;
 
-    ssl_certificate     /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
+#     ssl_certificate     /etc/nginx/certs/cert.pem;
+#     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    client_max_body_size 200M;
+#     client_max_body_size 200M;
 
-    location / {
-        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app/;
-        proxy_set_header Host $http_host;
-        # proxy_set_header Host moneyswap-nextjs-t-apps.vercel.app;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     location / {
+#         proxy_pass https://moneyswap-nextjs-t-apps.vercel.app/;
+#         proxy_set_header Host $http_host;
+#         # proxy_set_header Host moneyswap-nextjs-t-apps.vercel.app;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        proxy_ssl_verify off;
-        add_header X-Served-By "nginx-moneyswap" always;
-    }
-}
+#         proxy_ssl_verify off;
+#         add_header X-Served-By "nginx-moneyswap" always;
+#     }
+# }
