--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -26,6 +26,11 @@ server {
     proxy_read_timeout    90s;
     send_timeout          90s;
 
+    client_header_timeout 60s;
+    client_body_timeout 60s;
+    keepalive_timeout 75s;
+    # send_timeout 60s;
+
     client_max_body_size 200M;
 
     # location /favicon.ico {
@@ -164,8 +169,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        proxy_request_buffering off;
-        proxy_set_header Connection "";
+        # proxy_request_buffering off;
+        # proxy_set_header Connection "";
 
         add_header X-Served-By "nginx-moneyswap" always;
     }
