--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -169,8 +169,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # proxy_request_buffering off;
-        # proxy_set_header Connection "";
+        proxy_request_buffering off;
+        proxy_set_header Connection "";
 
         add_header X-Served-By "nginx-moneyswap" always;
     }
