--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
-                    # uvicorn project.asgi:app --host 0.0.0.0"
+                    uvicorn project.asgi:app --host 0.0.0.0"
                     # uvicorn project.asgi:app \
                     # --host 0.0.0.0 \
                     # --port 8000 \
