--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -19,7 +19,7 @@ server {
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
     proxy_http_version 1.1;
-    # proxy_set_header Connection "";
+    proxy_set_header Connection "";
     
     proxy_connect_timeout 90s;
     proxy_send_timeout    90s;
