feat: add new models (restuct and copy from old models), add new API enpdoinds (API V2), add new admin models for new models, add new background task for parse xml file Exchangers, update nginx config file
BREKING CHANGE: restructure DB, API V2

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -79,7 +79,23 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /new_send_to_tg_group_review {
+        set $bot_api_service send_bot;
+        proxy_pass http://$bot_api_service:8002;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /send_to_tg_group_comment {
+        set $bot_api_service send_bot;
+        proxy_pass http://$bot_api_service:8002;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /new_send_to_tg_group_comment {
         set $bot_api_service send_bot;
         proxy_pass http://$bot_api_service:8002;
         proxy_set_header Host $http_host;
@@ -95,6 +111,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /new_send_notification_to_exchange_admin {
+        set $bot_api_service money_bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /send_comment_notification_to_exchange_admin {
         set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
@@ -103,7 +127,23 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /new_send_comment_notification_to_exchange_admin {
+        set $bot_api_service money_bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /send_comment_notification_to_review_owner {
+        set $bot_api_service money_bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /new_send_comment_notification_to_review_owner {
         set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
@@ -167,11 +207,28 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /api/v2/ {
+        # Проверяем наличие нужного заголовка
+        if ($http_moneyswap != "true") {
+            return 403;
+        }
+
+        set $backend_service django_fastapi;
+        proxy_pass http://$backend_service:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_request_buffering off;
+        proxy_set_header Connection "";
+
+        add_header X-Served-By "nginx-moneyswap" always;
+    }
 
     location / {
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
-        # proxy_set_header Host $http_host;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
