fix/test: edit admin models, add signals, test nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -209,6 +209,10 @@ server {
 
     location /api/v2/ {
         # Проверяем наличие нужного заголовка
+        if ($request_method = OPTIONS) {
+            return 204;
+        }
+        
         if ($http_moneyswap != "true") {
             return 403;
         }
