fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -208,13 +208,11 @@ server {
     }
 
     location /api/v2/ {
-        # Проверяем наличие нужного заголовка
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-        
-        if ($http_moneyswap != "true") {
-            return 403;
+
+        if ($request_method != OPTIONS) {
+            if ($http_moneyswap != "true") {
+                return 403;
+            }
         }
 
         set $backend_service django_fastapi;
