fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -209,11 +209,11 @@ server {
 
     location /api/v2/ {
 
-        if ($request_method != OPTIONS) {
-            if ($http_moneyswap != "true") {
-                return 403;
-            }
-        }
+        # if ($request_method != OPTIONS) {
+        #     if ($http_moneyswap != "true") {
+        #         return 403;
+        #     }
+        # }
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
