fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -7,6 +7,15 @@
 resolver 127.0.0.11 valid=10s;
 
 
+map "$request_method:$http_moneyswap" $block {
+    default 1;          # по умолчанию блокируем
+    "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
+    "OPTIONS:true" 0;
+    "GET:true" 0;       # GET с Moneyswap → разрешаем
+    "POST:true" 0;      # POST с Moneyswap → разрешаем
+}
+
+
 server {
     # server_name api.moneyswap.online;
 
@@ -214,6 +223,9 @@ server {
         #         return 403;
         #     }
         # }
+        if ($block) {
+            return 403;
+        }
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
