fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -7,14 +7,22 @@
 resolver 127.0.0.11 valid=10s;
 
 
+# map "$request_method:$http_moneyswap" $block {
+#     default 1;          # по умолчанию блокируем
+#     "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
+#     "OPTIONS:true" 0;
+#     "GET:true" 0;       # GET с Moneyswap → разрешаем
+#     "POST:true" 0;      # POST с Moneyswap → разрешаем
+# }
 map "$request_method:$http_moneyswap" $block {
     default 1;          # по умолчанию блокируем
     "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
     "OPTIONS:true" 0;
     "GET:true" 0;       # GET с Moneyswap → разрешаем
     "POST:true" 0;      # POST с Moneyswap → разрешаем
+    "PATCH:true" 0;     # PATCH с Moneyswap → разрешаем
+    "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
-
 
 server {
     # server_name api.moneyswap.online;
@@ -218,11 +226,6 @@ server {
 
     location /api/v2/ {
 
-        # if ($request_method != OPTIONS) {
-        #     if ($http_moneyswap != "true") {
-        #         return 403;
-        #     }
-        # }
         if ($block) {
             return 403;
         }
