fix/test; edit nginx config, add validation to bot requests

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -24,6 +24,16 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
+map $http_user_agent $is_bot {
+    default 0;
+    ~*(node|curl|python|wget|requests) 1;
+}
+
+map $http_referer $has_referer {
+    "" 0;
+    default 1;
+}
+
 server {
     # server_name api.moneyswap.online;
 
@@ -53,6 +63,14 @@ server {
     # location /favicon.ico {
     #     return 301 /static/general_models/favicon.ico;
     # }
+
+    if ($is_bot) {
+        return 403;
+    }
+
+    if ($has_referer = 0) {
+        return 403 ;
+    }
 
     location /favicon.ico {
         return 301 https://api.moneyswap.online/static/general_models/favicon.ico;
@@ -229,6 +247,14 @@ server {
         if ($block) {
             return 403;
         }
+
+        # if ($http_referer = "") {
+        #     return 403;
+        # }
+
+        # if ($http_user_agent ~* (node|curl|python|wget|requests)) {
+        #     return 403;
+        # }
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
