fix/test; edit nginx config, add validation to bot requests

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -24,15 +24,15 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
-map $http_user_agent $is_bot {
-    default 0;
-    ~*(node|curl|python|wget|requests) 1;
-}
+# map $http_user_agent $is_bot {
+#     default 0;
+#     ~*(node|curl|python|wget|requests) 1;
+# }
 
-map $http_referer $has_referer {
-    "" 0;
-    default 1;
-}
+# map $http_referer $has_referer {
+#     "" 0;
+#     default 1;
+# }
 
 server {
     # server_name api.moneyswap.online;
