fix/test; edit nginx config, add validation to bot requests

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -64,13 +64,13 @@ server {
     #     return 301 /static/general_models/favicon.ico;
     # }
 
-    if ($is_bot) {
-        return 403;
-    }
+    # if ($is_bot) {
+    #     return 403;
+    # }
 
-    if ($has_referer = 0) {
-        return 403 ;
-    }
+    # if ($has_referer = 0) {
+    #     return 403 ;
+    # }
 
     location /favicon.ico {
         return 301 https://api.moneyswap.online/static/general_models/favicon.ico;
