fix/test: remove make_city_active from patrner /add_partner_city_country API endpoint, edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -3,17 +3,9 @@
 # }
 
 #8.8.8.8
-
+# http {
 resolver 127.0.0.11 valid=10s;
 
-
-# map "$request_method:$http_moneyswap" $block {
-#     default 1;          # по умолчанию блокируем
-#     "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
-#     "OPTIONS:true" 0;
-#     "GET:true" 0;       # GET с Moneyswap → разрешаем
-#     "POST:true" 0;      # POST с Moneyswap → разрешаем
-# }
 map "$request_method:$http_moneyswap" $block {
     default 1;          # по умолчанию блокируем
     "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
@@ -24,15 +16,12 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
-# map $http_user_agent $is_bot {
-#     default 0;
-#     ~*(node|curl|python|wget|requests) 1;
-# }
+set_real_ip_from 92.53.105.212;   
+real_ip_header X-Forwarded-For;
+real_ip_recursive on;
 
-# map $http_referer $has_referer {
-#     "" 0;
-#     default 1;
-# }
+limit_req_zone $binary_remote_addr zone=api_v2_limit:10m rate=5r/s;
+
 
 server {
     # server_name api.moneyswap.online;
@@ -59,18 +48,11 @@ server {
     # send_timeout 60s;
 
     client_max_body_size 200M;
-
+    
     # location /favicon.ico {
     #     return 301 /static/general_models/favicon.ico;
     # }
 
-    # if ($is_bot) {
-    #     return 403;
-    # }
-
-    # if ($has_referer = 0) {
-    #     return 403 ;
-    # }
 
     location /favicon.ico {
         return 301 https://api.moneyswap.online/static/general_models/favicon.ico;
@@ -248,13 +230,7 @@ server {
             return 403;
         }
 
-        # if ($http_referer = "") {
-        #     return 403;
-        # }
-
-        # if ($http_user_agent ~* (node|curl|python|wget|requests)) {
-        #     return 403;
-        # }
+        limit_req zone=api_v2_limit burst=10 nodelay;
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
@@ -270,6 +246,8 @@ server {
     }
 
     location / {
+        limit_req zone=api_v2_limit burst=10 nodelay;
+
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
         proxy_set_header Host $host;
@@ -284,7 +262,7 @@ server {
     }
 
 }
-
+# }
 
 # server {
 #     server_name app.moneyswap.online;
