fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -16,6 +16,16 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
+map $http_user_agent $is_bot {
+    default 0;
+    ~*(node|curl|python|wget|requests) 1;
+}
+
+map $http_referer $has_referer {
+    "" 0;
+    default 1;
+}
+
 set_real_ip_from 92.53.105.212;   
 real_ip_header X-Forwarded-For;
 real_ip_recursive on;
@@ -52,6 +62,14 @@ server {
     # location /favicon.ico {
     #     return 301 /static/general_models/favicon.ico;
     # }
+
+    if ($is_bot) {
+        return 403;
+    }
+
+    if ($has_referer = 0) {
+        return 403;
+    }
 
 
     location /favicon.ico {
