fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -16,10 +16,10 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
-map $http_user_agent $is_bot {
-    default 0;
-    ~*(node|curl|python|wget|requests) 1;
-}
+# map $http_user_agent $is_bot {
+#     default 0;
+#     ~*(node|curl|python|wget|requests) 1;
+# }
 
 map $http_referer $has_referer {
     "" 0;
@@ -63,9 +63,9 @@ server {
     #     return 301 /static/general_models/favicon.ico;
     # }
 
-    if ($is_bot) {
-        return 403;
-    }
+    # if ($is_bot) {
+    #     return 403;
+    # }
 
     if ($has_referer = 0) {
         return 403;
