--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -21,10 +21,10 @@ map "$request_method:$http_moneyswap" $block {
 #     ~*(node|curl|python|wget|requests) 1;
 # }
 
-map $http_referer $has_referer {
-    "" 0;
-    default 1;
-}
+# map $http_referer $has_referer {
+#     "" 0;
+#     default 1;
+# }
 
 set_real_ip_from 92.53.105.212;   
 real_ip_header X-Forwarded-For;
@@ -67,9 +67,9 @@ server {
     #     return 403;
     # }
 
-    if ($has_referer = 0) {
-        return 403;
-    }
+    # if ($has_referer = 0) {
+    #     return 403;
+    # }
 
 
     location /favicon.ico {
