--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==25.1.0
 aiohappyeyeballs==2.3.5
 aiohttp==3.10.3
 aiosignal==1.3.1
@@ -22,8 +23,9 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 CProfileV==1.0.7
-cron-descriptor==1.4.0
+cron_descriptor==1.4.0
 cryptography==42.0.5
+distro==1.9.0
 Django==4.2.7
 django-admin-action-forms==1.2.1
 django-admin-rangefilter==0.13.2
@@ -52,6 +54,7 @@ httpx==0.27.0
 humanize==4.9.0
 idna==3.4
 Jinja2==3.1.4
+jiter==0.10.0
 jsmin==3.0.1
 kombu==5.3.3
 lxml==4.9.3
@@ -59,6 +62,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 multidict==6.0.5
+openai==1.102.0
 outcome==1.3.0.post0
 packaging==24.1
 passlib==1.7.4
@@ -94,10 +98,11 @@ soupsieve==2.5
 sqlparse==0.4.4
 starlette==0.37.2
 tornado==6.4
+tqdm==4.67.1
 trio==0.24.0
 trio-websocket==0.11.1
 typer==0.12.3
-typing_extensions==4.8.0
+typing_extensions==4.15.0
 tzdata==2023.3
 urllib3==2.0.7
 uvicorn==0.30.1
