feat: edit parse directions from xml file exchangers background task realization, separate task to 2 steps: CPU bound and I/O bound, add new field is_parse to Exchanger model, add new_age.json to update actual data to age field for Exchangers
BREAKING CHANGE: make celery worker service for each queue: CPU bound and I/O bound tasks, add xml_files holder to store actual files for celery services

--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -143,8 +143,8 @@ services:
     restart: always
     networks:
       - common-network
-    # command: sh -c 'celery -A project worker -l info -Q cpu_queue -c 2 -n cpu@%h'
-    command: sh -c 'celery -A project worker -l info -c 4'
+    command: sh -c 'celery -A project worker -l info -Q cpu_queue -c 2 -n cpu@%h'
+    # command: sh -c 'celery -A project worker -l info -c 4'
     environment:
       - POSTGRES_HOST=psql_db
       - SELENIUM_DRIVER=firefox
