--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -27,7 +27,8 @@ map "$request_method:$http_moneyswap" $block {
 # }
 
 set_real_ip_from 92.53.105.212;   
-real_ip_header X-Forwarded-For;
+# real_ip_header X-Forwarded-For;
+real_ip_header X-Vercel-Forwarded-For;
 real_ip_recursive on;
 
 limit_req_zone $binary_remote_addr zone=api_v2_limit:10m rate=5r/s;
