--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -16,15 +16,10 @@ map "$request_method:$http_moneyswap" $block {
     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
 }
 
-# map $http_user_agent $is_bot {
-#     default 0;
-#     ~*(node|curl|python|wget|requests) 1;
-# }
 
-# map $http_referer $has_referer {
-#     "" 0;
-#     default 1;
-# }
+log_format main '$realip_remote_addr - $remote_user [$time_local] "$request" '
+                '$status $body_bytes_sent "$http_referer" '
+                '"$http_user_agent" "$http_x_forwarded_for"';
 
 set_real_ip_from 92.53.105.212;   
 # real_ip_header X-Forwarded-For;
