--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -17,9 +17,12 @@ map "$request_method:$http_moneyswap" $block {
 }
 
 
-# log_format main '$realip_remote_addr - $remote_user [$time_local] "$request" '
-#                 '$status $body_bytes_sent "$http_referer" '
-#                 '"$http_user_agent" "$http_x_forwarded_for"';
+log_format main_debug '$realip_remote_addr - $remote_user [$time_local] "$request" '
+                '$status $body_bytes_sent "$http_referer" '
+                '"$http_user_agent" "$http_x_forwarded_for"';
+
+access_log /dev/stdout main_debug;
+error_log /dev/stderr warn;
 
 set_real_ip_from 92.53.105.212;   
 # real_ip_header X-Forwarded-For;
