fix/test: edit log format for nginx service

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -17,16 +17,16 @@ map "$request_method:$http_moneyswap" $block {
 }
 
 
-log_format main_debug '$realip_remote_addr - $remote_user [$time_local] "$request" '
-                '$status $body_bytes_sent "$http_referer" '
-                '"$http_user_agent" "$http_x_forwarded_for"';
+# log_format main_debug '$realip_remote_addr - $remote_user [$time_local] "$request" '
+#                 '$status $body_bytes_sent "$http_referer" '
+#                 '"$http_user_agent" "$http_x_forwarded_for"';
 
-access_log /dev/stdout main_debug;
-error_log /dev/stderr warn;
+# access_log /dev/stdout main_debug;
+# error_log /dev/stderr warn;
 
 set_real_ip_from 92.53.105.212;   
-# real_ip_header X-Forwarded-For;
-real_ip_header X-Vercel-Forwarded-For;
+real_ip_header X-Forwarded-For;
+# real_ip_header X-Vercel-Forwarded-For;
 real_ip_recursive on;
 
 limit_req_zone $binary_remote_addr zone=api_v2_limit:10m rate=5r/s;
