fix/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -24,6 +24,10 @@ map "$request_method:$http_moneyswap" $block {
 # access_log /dev/stdout main_debug;
 # error_log /dev/stderr warn;
 
+log_format debug_real_ip '$remote_addr -> $http_x_real_ip -> $http_x_forwarded_for -> $http_x_vercel_forwarded_for "$request"';
+
+access_log /var/log/nginx/access_debug.log debug_real_ip;
+
 # set_real_ip_from 92.53.105.212;   
 # real_ip_header X-Forwarded-For;
 # # real_ip_header X-Vercel-Forwarded-For;
