--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -29,10 +29,12 @@ distro==1.9.0
 Django==4.2.7
 django-admin-action-forms==1.2.1
 django-admin-rangefilter==0.13.2
+django-appconf==1.2.0
 django-celery-beat==2.5.0
 django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
 django-prometheus==2.3.1
+django-select2==8.4.3
 django-summernote==0.8.20.0
 django-timezone-field==6.0.1
 dnspython==2.6.1
