--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
+                    python manage.py collectstatic --no-input &&
                     gunicorn -w 2 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000 --timeout 180 --error-logfile /app/logs/gunicorn-error.log"
                     # python manage.py create_new_periodic_task &
                     # python manage.py periodic_task_exchange_admin_notifications &&
@@ -65,7 +66,6 @@ services:
                     # --workers 4 \
                     # --timeout-keep-alive 60 \
                     # --loop uvloop"
-                    # python manage.py collectstatic --no-input &&
                     # python manage.py create_new_reviews_from_old &&
                     # python manage.py parse_reviews_selenium &&
                     # python manage.py add_time_create_for_exchanges &&
