--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -38,7 +38,7 @@ set_real_ip_from 92.53.105.212;
 real_ip_recursive on;
 
 
-limit_req_zone $binary_remote_addr zone=api_v2_limit:10m rate=5r/s;
+# limit_req_zone $binary_remote_addr zone=api_v2_limit:10m rate=5r/s;
 
 
 server {
@@ -256,7 +256,7 @@ server {
             return 403;
         }
 
-        limit_req zone=api_v2_limit burst=10 nodelay;
+        # limit_req zone=api_v2_limit burst=10 nodelay;
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
@@ -272,7 +272,7 @@ server {
     }
 
     location / {
-        limit_req zone=api_v2_limit burst=10 nodelay;
+        # limit_req zone=api_v2_limit burst=10 nodelay;
 
         set $backend_service django_fastapi;
         proxy_pass http://$backend_service:8000;
