fix:/test: edit nginx config

--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -6,15 +6,15 @@
 # http {
 resolver 127.0.0.11 valid=10s;
 
-map "$request_method:$http_moneyswap" $block {
-    default 1;          # по умолчанию блокируем
-    "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
-    "OPTIONS:true" 0;
-    "GET:true" 0;       # GET с Moneyswap → разрешаем
-    "POST:true" 0;      # POST с Moneyswap → разрешаем
-    "PATCH:true" 0;     # PATCH с Moneyswap → разрешаем
-    "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
-}
+# map "$request_method:$http_moneyswap" $block {
+#     default 1;          # по умолчанию блокируем
+#     "OPTIONS:" 0;       # OPTIONS без Moneyswap → разрешаем
+#     "OPTIONS:true" 0;
+#     "GET:true" 0;       # GET с Moneyswap → разрешаем
+#     "POST:true" 0;      # POST с Moneyswap → разрешаем
+#     "PATCH:true" 0;     # PATCH с Moneyswap → разрешаем
+#     "DELETE:true" 0;    # DELETE с Moneyswap → разрешаем
+# }
 
 
 # log_format main_debug '$realip_remote_addr - $remote_user [$time_local] "$request" '
@@ -252,9 +252,24 @@ server {
 
     location /api/v2/ {
 
-        if ($block) {
+        # if ($block) {
+        #     return 403;
+        # }
+
+        #
+        if ($request_method = OPTIONS) {
+            proxy_pass http://django_fastapi:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $realip_remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $realip_remote_addr;
+            break;
+        }
+
+        if ($http_moneyswap != "true") {
             return 403;
         }
+        #
 
         # limit_req zone=api_v2_limit burst=10 nodelay;
 
