--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -21,6 +21,9 @@ map "$request_method:$http_moneyswap" $block {
     "OPTIONS:" 0;
     "GET:true" 0;
     "POST:true" 0;
+    "PATCH:true" 0;
+    "PUT:true" 0;
+    "DELETE:true" 0;
 }
 
 # log_format main_debug '$realip_remote_addr - $remote_user [$time_local] "$request" '
