--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -40,7 +40,6 @@ django-timezone-field==6.0.1
 dnspython==2.6.1
 ecdsa==0.18.0
 email_validator==2.2.0
-eventlet==0.36.1
 exceptiongroup==1.1.3
 fastapi==0.111.1
 fastapi-cli==0.0.4
@@ -50,10 +49,13 @@ gevent==23.9.1
 greenlet==3.0.2
 gunicorn==22.0.0
 h11==0.14.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 humanize==4.9.0
+hyperframe==6.1.0
 idna==3.4
 Jinja2==3.1.4
 jiter==0.10.0
